--- a/poll_app/requirements.txt
+++ b/poll_app/requirements.txt
@@ -2,6 +2,7 @@ bcrypt==4.2.0
 blinker==1.9.0
 click==8.1.7
 Flask==3.0.3
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 itsdangerous==2.2.0
@@ -10,4 +11,3 @@ MarkupSafe==3.0.2
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.1.3
-flask_login==0.6.3
