--- a/poll_app/requirements.txt
+++ b/poll_app/requirements.txt
@@ -8,6 +8,8 @@ greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+pillow==11.0.0
+qrcode==8.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.1.3
