--- a/poll_app/requirements.txt
+++ b/poll_app/requirements.txt
@@ -10,6 +10,7 @@ fonttools==4.55.0
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 kiwisolver==1.4.7
 MarkupSafe==3.0.2
 matplotlib==3.9.2
@@ -21,8 +22,11 @@ pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 qrcode==8.0
+scikit-learn==1.5.2
+scipy==1.14.1
 six==1.16.0
 SQLAlchemy==2.0.36
+threadpoolctl==3.5.0
 typing_extensions==4.12.2
 tzdata==2024.2
 Werkzeug==3.1.3
